04-Terraform-Loops-MetaArguments-SplatOperator/01-MetaArgument-Count-For-Loops-Lists-Maps/ec2-securitygroup.tf
#Create security group - SSH traffic

resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "SSH allowed security group"
  ingress {
    description = "Allow port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "allow all ip and ports outbond"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vpc-ssh"
  }
}

#Create security group - Web traffic

resource "aws_security_group" "vpc-web" {
  name        = "vpc-web"
  description = "allow port 80 and 443"

  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "allow port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "allow all ip and port outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "vpc-web"
  }

}
